Criado Dockerfile para o frontend e configurado compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,18 @@ services:
     networks:
       - todo
 
+  frontend:
+    depends_on:
+      - backend
+    image: frontend_todo
+    container_name: frontend_todo_container
+    env_file:
+      - ./config/back.env
+    ports:
+      - 3000:3000
+    networks:
+      - todo
+
 
 networks:
   todo:
