Adicionado CORS no projeto de Backend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.8
 RUN apt update -y && apt install -y python3-pip python-dev
-RUN pip install flask flask_mysqldb
+RUN pip install flask flask_mysqldb flask_cors
 WORKDIR /app
 COPY . .
 EXPOSE 5000
