--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.3'
 
 services:
   db:
+    build: ./database/
     image: mysql_todo
     container_name: mysql_todo_container
     env_file:
@@ -12,6 +13,7 @@ services:
   backend:
     depends_on:
       - db
+    build: ./backend/
     image: backend_todo
     container_name: backend_todo_container
     environment:
@@ -27,10 +29,9 @@ services:
   frontend:
     depends_on:
       - backend
+    build: ./frontend/
     image: frontend_todo
     container_name: frontend_todo_container
-    env_file:
-      - ./config/back.env
     ports:
       - 3000:3000
     networks:
